# proto-schema-parser

./: .gitignore  DEVELOPER.md  DOCUMENTATION.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yml  pull.yaml  release.yaml  release.yml
antlr/: ProtobufLexer.g4  ProtobufParser.g4
proto_schema_parser/: __init__.py  ast.py  generator.py  model.py  parser.py
proto_schema_parser/antlr/: ProtobufLexer.interp  ProtobufLexer.py  ProtobufLexer.tokens  ProtobufParser.interp  ProtobufParser.py  ProtobufParser.tokens  ProtobufParserListener.py  ProtobufParserVisitor.py
pyprotoparser/: __init__.py  parser.py
tests/: test_generator.py  test_parser.py
